# ric3

./: .gitignore  Cargo.toml  README.md
assets/: style.css
posts/default/: content.md  metadata.toml
src/: args.rs  assets.rs  lib.rs  main.rs  posts.rs  qr.rs  ssl_redirect.rs
static/: index.html  site.webmanifest
systemd-info/: refresh-service  ric3.service
templates/: blog-post.html  default-page.html
