[package]
name = "ric3"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
mime_guess = "2.0.5"
pulldown-cmark = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
