[package]
name = "ric3"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
clap = { version = "4.5.16", features = ["derive"] }
mime_guess = "2.0.5"
pulldown-cmark = { version = "0.12.0", features = ["simd"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.208"
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
